Basics on catalog list model in the GUI.

--- a/src/GUI/Launcher.ui
+++ b/src/GUI/Launcher.ui
@@ -718,9 +718,6 @@
           <property name="spacing">
            <number>0</number>
           </property>
-          <item row="0" column="0" colspan="3">
-           <widget class="QListWidget" name="aircraftPathsList_2"/>
-          </item>
           <item row="1" column="0">
            <spacer name="horizontalSpacer_5">
             <property name="orientation">
@@ -735,7 +732,7 @@
            </spacer>
           </item>
           <item row="1" column="2">
-           <widget class="QToolButton" name="removeAircraftPath_2">
+           <widget class="QToolButton" name="removeCatalog">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
               <horstretch>0</horstretch>
@@ -754,7 +751,7 @@
            </widget>
           </item>
           <item row="1" column="1">
-           <widget class="QToolButton" name="addAircraftPath_2">
+           <widget class="QToolButton" name="addCatalog">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
               <horstretch>0</horstretch>
@@ -771,6 +768,9 @@
              <string>+</string>
             </property>
            </widget>
+          </item>
+          <item row="0" column="0" colspan="3">
+           <widget class="QListView" name="catalogsList"/>
           </item>
          </layout>
         </widget>
