--- a/src/GUI/Launcher.ui
+++ b/src/GUI/Launcher.ui
@@ -55,7 +55,7 @@
       </widget>
      </item>
      <item row="1" column="2">
-      <widget class="QLabel" name="airportDescription">
+      <widget class="QLabel" name="locationDescription">
        <property name="text">
         <string/>
        </property>
@@ -231,207 +231,7 @@
         <number>4</number>
        </property>
        <item>
-        <layout class="QHBoxLayout" name="horizontalLayout_6">
-         <item>
-          <widget class="QLabel" name="airportIdent">
-           <property name="text">
-            <string>Search:</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QLineEdit" name="airportEdit">
-           <property name="placeholderText">
-            <string>Enter an ICAO code, navaid or search by name</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="airportHistory">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="autoDefault">
-            <bool>false</bool>
-           </property>
-           <property name="flat">
-            <bool>false</bool>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </item>
-       <item>
-        <widget class="QStackedWidget" name="locationStack">
-         <property name="currentIndex">
-          <number>0</number>
-         </property>
-         <widget class="QWidget" name="diagramPage">
-          <layout class="QGridLayout" name="gridLayout" columnstretch="0,1,1,0">
-           <property name="leftMargin">
-            <number>0</number>
-           </property>
-           <property name="topMargin">
-            <number>0</number>
-           </property>
-           <property name="rightMargin">
-            <number>0</number>
-           </property>
-           <property name="bottomMargin">
-            <number>0</number>
-           </property>
-           <item row="3" column="0">
-            <widget class="QRadioButton" name="parkingRadio">
-             <property name="text">
-              <string>Parking:</string>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="1">
-            <widget class="QCheckBox" name="onFinalCheckbox">
-             <property name="text">
-              <string>On 10-mile final</string>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="0">
-            <widget class="QRadioButton" name="runwayRadio">
-             <property name="text">
-              <string>Runway:</string>
-             </property>
-            </widget>
-           </item>
-           <item row="6" column="2">
-            <widget class="QSpinBox" name="offsetBearingSpinbox">
-             <property name="wrapping">
-              <bool>true</bool>
-             </property>
-             <property name="maximum">
-              <number>359</number>
-             </property>
-             <property name="singleStep">
-              <number>5</number>
-             </property>
-            </widget>
-           </item>
-           <item row="3" column="1" colspan="3">
-            <widget class="QComboBox" name="parkingCombo"/>
-           </item>
-           <item row="1" column="1" colspan="3">
-            <widget class="QComboBox" name="runwayCombo"/>
-           </item>
-           <item row="6" column="3">
-            <widget class="QCheckBox" name="trueBearing">
-             <property name="text">
-              <string>True</string>
-             </property>
-            </widget>
-           </item>
-           <item row="6" column="1">
-            <widget class="QLabel" name="offsetBearingLabel">
-             <property name="enabled">
-              <bool>true</bool>
-             </property>
-             <property name="text">
-              <string>Bearing:</string>
-             </property>
-             <property name="alignment">
-              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-             </property>
-            </widget>
-           </item>
-           <item row="5" column="0">
-            <widget class="QRadioButton" name="offsetRadioButton">
-             <property name="text">
-              <string>Bearing and distance offset:</string>
-             </property>
-            </widget>
-           </item>
-           <item row="5" column="1">
-            <widget class="QLabel" name="offsetDistanceLabel">
-             <property name="text">
-              <string>Distance:</string>
-             </property>
-             <property name="alignment">
-              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-             </property>
-            </widget>
-           </item>
-           <item row="5" column="2">
-            <widget class="QDoubleSpinBox" name="offsetNmSpinbox">
-             <property name="suffix">
-              <string>nm</string>
-             </property>
-             <property name="decimals">
-              <number>1</number>
-             </property>
-             <property name="maximum">
-              <double>10000.000000000000000</double>
-             </property>
-             <property name="value">
-              <double>10.000000000000000</double>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="0" colspan="4">
-            <widget class="AirportDiagram" name="airportDiagram" native="true">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </widget>
-         <widget class="QWidget" name="searchResultsPage">
-          <layout class="QVBoxLayout" name="verticalLayout_5">
-           <property name="leftMargin">
-            <number>0</number>
-           </property>
-           <property name="topMargin">
-            <number>0</number>
-           </property>
-           <property name="rightMargin">
-            <number>0</number>
-           </property>
-           <property name="bottomMargin">
-            <number>0</number>
-           </property>
-           <item>
-            <widget class="QListView" name="searchList"/>
-           </item>
-          </layout>
-         </widget>
-         <widget class="QWidget" name="searchStatusPage">
-          <layout class="QVBoxLayout" name="verticalLayout_6">
-           <item>
-            <widget class="QLabel" name="searchIcon">
-             <property name="text">
-              <string>TextLabel</string>
-             </property>
-             <property name="alignment">
-              <set>Qt::AlignBottom|Qt::AlignHCenter</set>
-             </property>
-            </widget>
-           </item>
-           <item>
-            <widget class="QLabel" name="searchStatusText">
-             <property name="text">
-              <string/>
-             </property>
-             <property name="alignment">
-              <set>Qt::AlignHCenter|Qt::AlignTop</set>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </widget>
-        </widget>
+        <widget class="LocationWidget" name="location" native="true"/>
        </item>
       </layout>
      </widget>
@@ -721,9 +521,9 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>AirportDiagram</class>
+   <class>LocationWidget</class>
    <extends>QWidget</extends>
-   <header location="global">GUI/AirportDiagram.hxx</header>
+   <header location="global">GUI/LocationWidget.hxx</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
