--- a/src/GUI/LocationWidget.ui
+++ b/src/GUI/LocationWidget.ui
@@ -105,7 +105,7 @@
       </layout>
      </widget>
      <widget class="QWidget" name="navaidPage">
-      <layout class="QGridLayout" name="gridLayout_3" rowstretch="1,0,0,0,0">
+      <layout class="QGridLayout" name="gridLayout_3" rowstretch="1,0,0,0">
        <property name="leftMargin">
         <number>0</number>
        </property>
@@ -174,7 +174,6 @@
            <height>200</height>
           </size>
          </property>
-         <zorder>offsetGroup</zorder>
         </widget>
        </item>
        <item row="2" column="6" colspan="2">
@@ -218,6 +217,18 @@
           <bool>false</bool>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout_2">
+          <property name="leftMargin">
+           <number>4</number>
+          </property>
+          <property name="topMargin">
+           <number>4</number>
+          </property>
+          <property name="rightMargin">
+           <number>4</number>
+          </property>
+          <property name="bottomMargin">
+           <number>4</number>
+          </property>
           <item>
            <widget class="QLabel" name="offsetBearingLabel">
             <property name="enabled">
