--- a/src/GUI/resources.qrc
+++ b/src/GUI/resources.qrc
@@ -15,5 +15,8 @@
         <file alias="airport-tower-icon">airport-tower-icon.png</file>
         <file alias="vor-dme-icon">vor-dme-icon.png</file>
         <file alias="seaport-tower-icon">seaport-tower-icon.png</file>
+        <file alias="ndb-small-icon">ndb-small-icon .png</file>
+        <file alias="ndb-large-icon">ndb-large-icon.png</file>
+        <file alias="airplane-icon">airplane-icon.png</file>
     </qresource>
 </RCC>
